@@ -1,4 +1,4 @@
-; @(#)$Ident: dist.ini 2013-12-03 16:32 pjf ;
+; @(#)$Ident: dist.ini 2013-12-06 16:00 pjf ;
 
 name = File-DataClass
 
@@ -20,7 +20,7 @@ Try::Tiny         = 0.18
 Type::Tiny        = 0.012
 XML::Bare         = 0.47
 XML::Simple       = 2.18
-Unexpected        = v0.18.0
+Unexpected        = v0.19.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -34,8 +34,6 @@ Module::Build     = 0.4004
 Test::Deep        = 0.108
 Test::Requires    = 0.06
 Text::Diff        = 1.37
-
-[Meta::Dynamic::Config]
 
 [MetaNoIndex]
 directory         = examples
